FIX focus outline visible on click

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -7,7 +7,7 @@ ol {
   list-style: none;
 }
 
-*:focus {
+*:focus-visible {
   outline: 4px solid $focus-outline-color;
   outline-offset: 4px;
 }
